--- a/server/src/package.json
+++ b/server/src/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,8 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.5.0"
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.0",
+    "nodemon": "^1.18.11"
   }
 }
