--- a/server/src/package.json
+++ b/server/src/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ydstaana/Scheduling-App#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "moment": "^2.24.0",
