--- a/web/package.json
+++ b/web/package.json
@@ -24,9 +24,11 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "ajv-keywords": "^3.4.0",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
+    "ngx-pagination": "^3.2.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
