--- a/server/src/package.json
+++ b/server/src/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "for-async": "^1.0.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.0",
     "nodemon": "^1.18.11"
